// In order to re-generate the golang packages for `Message` you will need...
// 1. Protobuf binary (tested with protoc 3.0.0). - https://github.com/gogo/protobuf/releases
// 2. Gogo Protobuf (tested with gogo 0.3). - https://github.com/gogo/protobuf
// Now from `libp2p/<path>/pb` you can run...
// `protoc --gogo_out=. --proto_path=../../<path>/pb/ --proto_path=./ --proto_path=/usr/include pb.proto`

syntax = "proto3";
package reqresp.pb;

message FinderMessage {
    enum MessageType {
        ERROR_RESPONSE = 0;
        FIND = 1;
        FIND_RESPONSE = 2;
        LIST_PROVIDERS = 3;
        LIST_PROVIDERS_RESPONSE = 4;
        GET_PROVIDER = 5;
        GET_PROVIDER_RESPONSE = 6;
        GET_STATS = 7;
        GET_STATS_RESPONSE = 8;
    }

    // defines what type of message it is.
    MessageType type = 1;

    // Value for the message
    bytes data = 2;
}
