// In order to re-generate the golang packages for `Message` you will need...
// 1. Protobuf binary (tested with protoc 3.0.0). - https://github.com/gogo/protobuf/releases
// 2. Gogo Protobuf (tested with gogo 0.3). - https://github.com/gogo/protobuf
// Now from `libp2p/<path>/pb` you can run...
// `protoc --gogo_out=. --proto_path=../../<path>/pb/ --proto_path=./ --proto_path=/usr/include pb.proto`

syntax = "proto3";
package reqresp.pb;

message IngestMessage {
    enum MessageType {
        ERROR_RESPONSE = 0;
        DISCOVER_PROVIDER = 1;
        DISCOVER_PROVIDER_RESPONSE=2;
        REGISTER_PROVIDER = 3;
        REGISTER_PROVIDER_RESPONSE=4;
        REMOVE_PROVIDER = 5;
        REMOVE_PROVIDER_RESPONSE=6;
        INDEX_CONTENT=7;
        INDEX_CONTENT_RESPONSE=8;
    }

    // defines what type of message it is.
    MessageType type = 1;

    // Value for the message
    bytes data = 2;
}
